Added route to get rentals per farmer for farmers
